script-answers/exercise_12.8.txt
(base) % docker container ls
CONTAINER ID   IMAGE               COMMAND                  CREATED        STATUS              PORTS                     NAMES
1f50615f461b   initialized-mongo   "docker-entrypoint.s…"   23 hours ago   Up About a minute   0.0.0.0:3456->27017/tcp   todo-backend-mongo-1
(base) % script                           
Script started, output file is typescript
(base) % docker exec -it todo-backend-mongo-1 bash
root@1f50615f461b:/# mongo -shell
bash: mongo: command not found
root@1f50615f461b:/# mongosh
Current Mongosh Log ID:	66c4b6160bba56cb1bc76a8a
Connecting to:		mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.3.0
Using MongoDB:		7.0.12
Using Mongosh:		2.3.0

For mongosh info see: https://www.mongodb.com/docs/mongodb-shell/


To help improve our products, anonymous usage data is collected and sent to MongoDB periodically (https://www.mongodb.com/legal/privacy-policy).
You can opt-out by running the disableTelemetry() command.

test> showdbs
ReferenceError: showdbs is not defined
test> show dbs
MongoServerError[Unauthorized]: Command listDatabases requires authentication
test> -u root -p example
Uncaught:
SyntaxError: Missing semicolon. (1:2)

> 1 | -u root -p example
    |   ^
  2 |

test> exit
root@1f50615f461b:/# mongosh -u root -p example
Current Mongosh Log ID:	66c4b651ba0475e59cc76a8a
Connecting to:		mongodb://<credentials>@127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.3.0
Using MongoDB:		7.0.12
Using Mongosh:		2.3.0

For mongosh info see: https://www.mongodb.com/docs/mongodb-shell/

------
   The server generated these startup warnings when booting
   2024-08-20T15:23:37.819+00:00: Using the XFS filesystem is strongly recommended with the WiredTiger storage engine. See http://dochub.mongodb.org/core/prodnotes-filesystem
   2024-08-20T15:23:38.718+00:00: /sys/kernel/mm/transparent_hugepage/enabled is 'always'. We suggest setting it to 'never' in this binary version
   2024-08-20T15:23:38.718+00:00: vm.max_map_count is too low
------

test> show dbs
admin         100.00 KiB
config        108.00 KiB
local          72.00 KiB
the_database   72.00 KiB
test> use the_database
switched to db the_database
the_database> show collections
todos
the_database> db.todos.find({})
[
  {
    _id: ObjectId('66c3742ab7afa472fec76a8b'),
    text: 'Write code',
    done: true
  },
  {
    _id: ObjectId('66c3742ab7afa472fec76a8c'),
    text: 'Learn about containers',
    done: false
  }
]
the_database> db.todos.create({ text: "Increase the number of tools in my tool belt", done: false})
TypeError: db.todos.create is not a function
the_database> db.todos.insertOne({ text: "Increase the number of tools in my tool belt", done: false})
{
  acknowledged: true,
  insertedId: ObjectId('66c4b726ba0475e59cc76a8b')
}
the_database> db.todos.find({})
[
  {
    _id: ObjectId('66c3742ab7afa472fec76a8b'),
    text: 'Write code',
    done: true
  },
  {
    _id: ObjectId('66c3742ab7afa472fec76a8c'),
    text: 'Learn about containers',
    done: false
  },
  {
    _id: ObjectId('66c4b726ba0475e59cc76a8b'),
    text: 'Increase the number of tools in my tool belt',
    done: false
  }
]

the_database> exit
root@1f50615f461b:/# exit
exit